# movement_detection

./: CMakeLists.txt  README.md  package.xml
config/: movement_detection.yaml
launch/: movement_detection.launch
scripts/: movement_detection.py  raw_read.py
